# cxxsql

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  booststrap.sh  cxx20sql.kdev4  main.cpp  vcpkg.json
include/cxxsql/: api.h  column.h  db_data_types.h  sql_command_text.h  table.h
include/cxxsql/detail/: basic_fixed_string.h  common.h  connection_handle.h  core_db_functionality.h  db_type.h  identity_name.h  pragmas.h
include/cxxsql/pqsql/: connection.h  db_data_types.h
include/cxxsql/pqsql/detail/: common.h  db_type.h  error_condition.h
include/stralgo/: basic_fixed_string.h  stralgo.h  strconcept.h  strconv_numeric.h
include/stralgo/detail/: stralgo.h  strconv_numeric.h
src/pgsql/: connection.cc
unit_tests/: CMakeLists.txt
unit_tests/header_only/: column_constraints.h  fail_column_constraints.h  fail_table_decl.h  table_decl.h
unit_tests/header_only/cxxsql/: unit_test_common.h
unit_tests/runtime/: create_table.cc  crtp_explained.cc  ut.cc
vcpkg_overlay/ports/ut/: portfile.cmake  vcpkg.json
